kops/statefulsets/db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
spec:
  selector:
    matchLabels:
      app: db
  serviceName: db-service
  replicas: 2
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: mongo
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27017
          name: web
        volumeMounts:
        - name: db-data
          mountPath: /data/db

  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db
  ports:
  - port: 27017
    targetPort: 27017
