kops/statefulsets/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec:
  ports:
  - port: 8081
    name: web
  selector:
    app: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: mongo-express
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
          name: web
        resources:
          limits:
            memory: "128Mi"
            cpu: "128m"
